<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/MenuItemColor"
    >
    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search_title"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemCart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/cart_title"
        app:actionLayout="@layout/custom_item_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/itemMore"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:title="@string/more_title"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/itemLogin"
                android:icon="@drawable/dangnhap"
                android:title="@string/login_title"
                />
            <item
                android:id="@+id/itemNotification"
                android:icon="@drawable/ic_notifications_none_black_24dp"
                android:title="@string/notification_title" />
            <item
                android:id="@+id/itemFavorite"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                android:title="@string/favorite_title" />
            <item
                android:id="@+id/itemOrder"
                android:icon="@drawable/donhang"
                android:title="@string/order_title" />
            <item
                android:id="@+id/itemSetting"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting_title" />
            <item
                android:id="@+id/itemPolicy"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/policy_title" />
            <item
                android:id="@+id/itemHelp"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/help_title" />
            <item
                android:id="@+id/itemLogout"
                android:icon="@drawable/ic_last_page_black_24dp"
                android:title="@string/logout_title"
                android:visible="false"
                />
        </menu>
    </item>
</menu>